--- a/WebLegemClient/bower.json
+++ b/WebLegemClient/bower.json
@@ -24,6 +24,7 @@
     "animate.css": "~3.4.0",
     "ng-file-upload": "~10.0.2",
     "angular-aria": "~1.4.8",
-    "angular-animate": "~1.4.8"
+    "angular-animate": "~1.4.8",
+    "angular-mocks": "~1.4.8"
   }
 }
