TipoEntidadDAL basico creado, no se hace mapeo aun de la nested table

--- a/WebLegemDAL/WebLegemDAL.csproj
+++ b/WebLegemDAL/WebLegemDAL.csproj
@@ -52,10 +52,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntidadRefArrayFactory.cs" />
     <Compile Include="TipoDocumento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoDocumentoDAL.cs" />
     <Compile Include="TipoDocumentoFactory.cs" />
+    <Compile Include="TipoEntidad.cs" />
+    <Compile Include="TipoEntidadDAL.cs" />
+    <Compile Include="TipoEntidadFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
