cambios tratando de cuadrar el doc e id doc, ya funciona el listar, no funciona crear

--- a/WebLegemDAL/WebLegemDAL.csproj
+++ b/WebLegemDAL/WebLegemDAL.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -52,6 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Documento\Documento.cs" />
+    <Compile Include="Documento\DocumentoDAL.cs" />
+    <Compile Include="Documento\DocumentoFactory.cs" />
     <Compile Include="Entidad\Entidad.cs" />
     <Compile Include="Entidad\EntidadDAL.cs" />
     <Compile Include="Entidad\EntidadFactory.cs" />
@@ -69,9 +72,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Documento\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
