--- a/PruebasDB/PruebasDB.csproj
+++ b/PruebasDB/PruebasDB.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WebLegemDAL\WebLegemDAL.csproj">
+      <Project>{fe6e7495-a6a0-46e3-a072-3b9dbf33b5ae}</Project>
+      <Name>WebLegemDAL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
