--- a/WebLegemClient/bower.json
+++ b/WebLegemClient/bower.json
@@ -25,6 +25,8 @@
     "ng-file-upload": "~10.0.2",
     "angular-aria": "~1.4.8",
     "angular-animate": "~1.4.8",
-    "angular-mocks": "~1.4.8"
+    "angular-mocks": "~1.4.8",
+    "angular-upload": "~1.0.12",
+    "angular-file-upload": "~2.2.0"
   }
 }
