--- a/WebLegemClient/bower.json
+++ b/WebLegemClient/bower.json
@@ -28,5 +28,8 @@
     "angular-mocks": "~1.4.8",
     "angular-upload": "~1.0.12",
     "angular-file-upload": "~2.2.0"
+  },
+  "devDependencies": {
+    "angular-ui-router": "~0.2.15"
   }
 }
