--- a/WebLegemAPI/packages.config
+++ b/WebLegemAPI/packages.config
@@ -4,6 +4,7 @@
   <package id="iTextSharp" version="5.5.8" targetFramework="net452" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.OData" version="5.8.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
@@ -13,6 +14,15 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.OData.Core" version="6.14.0" targetFramework="net452" />
+  <package id="Microsoft.OData.Edm" version="6.14.0" targetFramework="net452" />
+  <package id="Microsoft.Spatial" version="6.14.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
+  <package id="Ninject.Extensions.ChildKernel" version="3.2.0.0" targetFramework="net452" />
+  <package id="Ninject.MVC3" version="3.2.1.0" targetFramework="net452" />
+  <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net452" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
 </packages>
