--- a/WebLegemDAL/WebLegemDAL.csproj
+++ b/WebLegemDAL/WebLegemDAL.csproj
@@ -34,6 +34,10 @@
       <HintPath>..\packages\AutoMapper.4.1.1\lib\net45\AutoMapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Spatial, Version=6.14.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Spatial.6.14.0\lib\portable-net40+sl5+wp8+win8+wpa\Microsoft.Spatial.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -44,6 +48,14 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.2\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Http, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.2\lib\net45\System.Web.Http.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,28 +64,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Archivo\Archivo.cs" />
+    <Compile Include="Archivo\ArchivoDAO.cs" />
     <Compile Include="BaseDAO.cs" />
     <Compile Include="DALExtensionMethods.cs" />
     <Compile Include="Documento\Documento.cs" />
-    <Compile Include="Documento\DocumentoDAL.cs" />
+    <Compile Include="Documento\DocumentoConContenido.cs" />
+    <Compile Include="Documento\DocumentoConContenidoFactory.cs" />
+    <Compile Include="Documento\DocumentoConContenidoDAO.cs" />
+    <Compile Include="Documento\DocumentoConContenidoQueryObject.cs" />
     <Compile Include="Documento\DocumentoFactory.cs" />
     <Compile Include="Entidad\Entidad.cs" />
-    <Compile Include="Entidad\EntidadDAL.cs" />
+    <Compile Include="Entidad\EntidadDAO.cs" />
     <Compile Include="Entidad\EntidadFactory.cs" />
     <Compile Include="IDataAccessObject.cs" />
-    <Compile Include="IdDocumento\IdDocumento.cs" />
-    <Compile Include="IdDocumento\IdDocumentoFactory.cs" />
+    <Compile Include="IGestorDeConsultas.cs" />
+    <Compile Include="IQueryObject.cs" />
     <Compile Include="TipoEntidad\EntidadRefArrayFactory.cs" />
     <Compile Include="TipoDocumento\TipoDocumento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TipoDocumento\TipoDocumentoDAL.cs" />
+    <Compile Include="TipoDocumento\TipoDocumentoDAO.cs" />
     <Compile Include="TipoDocumento\TipoDocumentoFactory.cs" />
     <Compile Include="TipoEntidad\TipoEntidad.cs" />
-    <Compile Include="TipoEntidad\TipoEntidadDAL.cs" />
+    <Compile Include="TipoEntidad\TipoEntidadDAO.cs" />
     <Compile Include="TipoEntidad\TipoEntidadFactory.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
