--- a/WebLegemDAL/packages.config
+++ b/WebLegemDAL/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="4.1.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.OData" version="5.8.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net452" />
+  <package id="Microsoft.OData.Core" version="6.14.0" targetFramework="net452" />
+  <package id="Microsoft.OData.Edm" version="6.14.0" targetFramework="net452" />
+  <package id="Microsoft.Spatial" version="6.14.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
 </packages>
