busquedas con filtros conectadas al servicio

--- a/.gitignore
+++ b/.gitignore
@@ -171,7 +171,8 @@ ClientBin/
 *.dbproj.schemaview
 *.pfx
 *.publishsettings
-node_modules/
+*/node_modules/
+*/bower_components/
 orleans.codegen.cs
 
 # RIA/Silverlight projects
