--- a/WebLegemClient/bower.json
+++ b/WebLegemClient/bower.json
@@ -27,7 +27,8 @@
     "angular-animate": "~1.4.8",
     "angular-mocks": "~1.4.8",
     "angular-upload": "~1.0.12",
-    "angular-file-upload": "~2.2.0"
+    "angular-file-upload": "~2.2.0",
+    "annyang": "^2.2.1"
   },
   "devDependencies": {
     "angular-ui-router": "~0.2.15"
