--- a/IdentityServer/Web.config
+++ b/IdentityServer/Web.config
@@ -4,6 +4,11 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <!-- Identity Server Configuration -->
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
+  </system.webServer>
+    
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
