lista roles y permisos ya funcionan correctamente, los estilos de la lista permisos estan arreglados, sin embargo aun tienen fallas los estilos de la lista de roles

--- a/WebLegemClient/bower.json
+++ b/WebLegemClient/bower.json
@@ -28,6 +28,7 @@
     "angular-mocks": "~1.4.8",
     "angular-upload": "~1.0.12",
     "angular-file-upload": "~2.2.0",
-    "annyang": "^2.2.1"
-  }  
+    "annyang": "^2.2.1",
+    "underscore": "^1.8.3"
+  }
 }
