--- a/WebLegemClient/bower.json
+++ b/WebLegemClient/bower.json
@@ -30,6 +30,7 @@
     "animate.css": "~3.4.0",
     "annyang": "^2.2.1",
     "ng-file-upload": "~10.0.2",
+    "overthrow": "~0.7.1",
     "underscore": "^1.8.3"
   }
 }
