--- a/WebLegemAPI/WebLegemAPI.csproj
+++ b/WebLegemAPI/WebLegemAPI.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Controllers\FotosController.cs" />
     <Compile Include="Controllers\PermisosController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
+    <Compile Include="Controllers\TipoAnotacionController.cs" />
     <Compile Include="Controllers\TipoDocumentoController.cs" />
     <Compile Include="Controllers\TipoEntidadController.cs" />
     <Compile Include="Controllers\UsuariosController.cs" />
