triggers anotacion, funcionando, y se creo el controller

--- a/WebLegemAPI/WebLegemAPI.csproj
+++ b/WebLegemAPI/WebLegemAPI.csproj
@@ -165,6 +165,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AnotacionController.cs" />
     <Compile Include="Controllers\DocumentoController.cs" />
     <Compile Include="Controllers\EntidadController.cs" />
     <Compile Include="Controllers\FilesController.cs" />
