--- a/WebLegemDAL/WebLegemDAL.csproj
+++ b/WebLegemDAL/WebLegemDAL.csproj
@@ -64,54 +64,54 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Accion\Accion.cs" />
-    <Compile Include="Accion\AccionFactory.cs" />
-    <Compile Include="Anotacion\Anotacion.cs" />
-    <Compile Include="Anotacion\AnotacionDAO.cs" />
-    <Compile Include="Anotacion\AnotacionFactory.cs" />
-    <Compile Include="Archivo\Archivo.cs" />
-    <Compile Include="Archivo\ArchivoDAO.cs" />
-    <Compile Include="BaseDAO.cs" />
+    <Compile Include="Entities\Accion.cs" />
+    <Compile Include="Factories\AccionFactory.cs" />
+    <Compile Include="Entities\Anotacion.cs" />
+    <Compile Include="Dao\AnotacionDao.cs" />
+    <Compile Include="Factories\AnotacionFactory.cs" />
+    <Compile Include="Entities\Archivo.cs" />
+    <Compile Include="Dao\ArchivoDao.cs" />
+    <Compile Include="Dao\BaseDao.cs" />
     <Compile Include="DALExtensionMethods.cs" />
-    <Compile Include="Documento\Documento.cs" />
-    <Compile Include="Documento\DocumentoConContenido.cs" />
-    <Compile Include="Documento\DocumentoConContenidoFactory.cs" />
-    <Compile Include="Documento\DocumentoConContenidoDAO.cs" />
-    <Compile Include="Documento\DocumentoConContenidoQueryObject.cs" />
-    <Compile Include="Documento\DocumentoDAO.cs" />
-    <Compile Include="Documento\DocumentoFactory.cs" />
-    <Compile Include="Documento\DocumentoQueryObject.cs" />
-    <Compile Include="Entidad\Entidad.cs" />
-    <Compile Include="Entidad\EntidadDAO.cs" />
-    <Compile Include="Entidad\EntidadFactory.cs" />
-    <Compile Include="IDataAccessObject.cs" />
-    <Compile Include="IGestorDeConsultas.cs" />
-    <Compile Include="IQueryObject.cs" />
-    <Compile Include="Modulo\Modulo.cs" />
-    <Compile Include="Modulo\ModuloFactory.cs" />
-    <Compile Include="Perimso\Permiso.cs" />
-    <Compile Include="Perimso\PermisoDAL.cs" />
-    <Compile Include="Perimso\PermisoFactory.cs" />
-    <Compile Include="Recurso\Recurso.cs" />
-    <Compile Include="Recurso\RecursoFactory.cs" />
-    <Compile Include="Rol\PermisoArrayFactory.cs" />
-    <Compile Include="Rol\Rol.cs" />
-    <Compile Include="Rol\RolDAO.cs" />
-    <Compile Include="Rol\RolFactory.cs" />
-    <Compile Include="TipoAnotacion\TipoAnotacion.cs" />
-    <Compile Include="TipoAnotacion\TipoAnotacionDao.cs" />
-    <Compile Include="TipoAnotacion\TipoAnotacionFactory.cs" />
-    <Compile Include="TipoEntidad\EntidadRefArrayFactory.cs" />
-    <Compile Include="TipoDocumento\TipoDocumento.cs" />
+    <Compile Include="Entities\Documento.cs" />
+    <Compile Include="Entities\DocumentoConContenido.cs" />
+    <Compile Include="Factories\DocumentoConContenidoFactory.cs" />
+    <Compile Include="Dao\DocumentoConContenidoDao.cs" />
+    <Compile Include="Dao\DocumentoConContenidoQueryObject.cs" />
+    <Compile Include="Dao\DocumentoDao.cs" />
+    <Compile Include="Factories\DocumentoFactory.cs" />
+    <Compile Include="Dao\DocumentoQueryObject.cs" />
+    <Compile Include="Entities\Entidad.cs" />
+    <Compile Include="Dao\EntidadDao.cs" />
+    <Compile Include="Factories\EntidadFactory.cs" />
+    <Compile Include="Dao\IDataAccessObject.cs" />
+    <Compile Include="Dao\IGestorDeConsultas.cs" />
+    <Compile Include="Dao\IQueryObject.cs" />
+    <Compile Include="Entities\Modulo.cs" />
+    <Compile Include="Factories\ModuloFactory.cs" />
+    <Compile Include="Entities\Permiso.cs" />
+    <Compile Include="Dao\PermisoDao.cs" />
+    <Compile Include="Factories\PermisoFactory.cs" />
+    <Compile Include="Entities\Recurso.cs" />
+    <Compile Include="Factories\RecursoFactory.cs" />
+    <Compile Include="Factories\PermisoArrayFactory.cs" />
+    <Compile Include="Entities\Rol.cs" />
+    <Compile Include="Dao\RolDao.cs" />
+    <Compile Include="Factories\RolFactory.cs" />
+    <Compile Include="Entities\TipoAnotacion.cs" />
+    <Compile Include="Dao\TipoAnotacionDao.cs" />
+    <Compile Include="Factories\TipoAnotacionFactory.cs" />
+    <Compile Include="Factories\EntidadRefArrayFactory.cs" />
+    <Compile Include="Entities\TipoDocumento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TipoDocumento\TipoDocumentoDAO.cs" />
-    <Compile Include="TipoDocumento\TipoDocumentoFactory.cs" />
-    <Compile Include="TipoEntidad\TipoEntidad.cs" />
-    <Compile Include="TipoEntidad\TipoEntidadDAO.cs" />
-    <Compile Include="TipoEntidad\TipoEntidadFactory.cs" />
-    <Compile Include="Usuario\Usuario.cs" />
-    <Compile Include="Usuario\UsuarioDAO.cs" />
-    <Compile Include="Usuario\UsuarioFactory.cs" />
+    <Compile Include="Dao\TipoDocumentoDao.cs" />
+    <Compile Include="Factories\TipoDocumentoFactory.cs" />
+    <Compile Include="Entities\TipoEntidad.cs" />
+    <Compile Include="Dao\TipoEntidadDao.cs" />
+    <Compile Include="Factories\TipoEntidadFactory.cs" />
+    <Compile Include="Entities\Usuario.cs" />
+    <Compile Include="Dao\UsuarioDao.cs" />
+    <Compile Include="Factories\UsuarioFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
