cambios base de datos, funciones creacion de documentos y busqueda en archivos, cambios en la interfaz para hacer funcionales los filtros y otras propiedades de la busqueda, se reviso la descarga de archivos

--- a/WebLegemAPI/Web.config
+++ b/WebLegemAPI/Web.config
@@ -4,7 +4,26 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+    <configSections>
+        <section name="ExpresionesAsunto" type="System.Configuration.NameValueSectionHandler, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />                  
+    </configSections>
+
+    <ExpresionesAsunto>
+        <add key="por_el_cual" value="^Por el Cual.*" />
+        <add key="asunto" value="^Asunto.*" />
+        <add key="a_traves" value="^A traves del cual.*" />
+        <add key="medio_de" value="^Por medio del cual.*" />
+    </ExpresionesAsunto>
+    
+    
   <appSettings>
+      
+      
+      <!--  -->
+    <add key="basePath" value="c:\oraData\web_legem" />
+    <add key="textPath" value="c:\oraData\web_legem\text" />
+    <add key="oracleDir" value="contenidos_dir" />
+      
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
