--- a/WebLegemAPI/WebLegemAPI.csproj
+++ b/WebLegemAPI/WebLegemAPI.csproj
@@ -93,6 +93,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\oracle\product\12.1.0\client_x32\odp.net\bin\4\Oracle.DataAccess.dll</HintPath>
     </Reference>
+    <Reference Include="System.Interactive, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Interactive.3.1.1\lib\net45\System.Interactive.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.Cors, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.Cors.5.2.3\lib\net45\System.Web.Cors.dll</HintPath>
@@ -161,13 +165,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers2\DocumentoController.cs" />
     <Compile Include="Controllers\AnotacionController.cs" />
-    <Compile Include="Controllers\DocumentoController.cs" />
+    <Compile Include="Controllers\DocumentosController.cs" />
     <Compile Include="Controllers\EntidadController.cs" />
     <Compile Include="Controllers\FilesController.cs" />
     <Compile Include="Controllers\FilesOldController.cs" />
@@ -181,7 +188,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Controllers2\ContenidoController.cs" />
     <Compile Include="Infrastructure\NinjectResolver.cs" />
+    <Compile Include="Models\AnalizadorAsunto.cs" />
+    <Compile Include="Models\ContenidoViewModel.cs" />
+    <Compile Include="Models\Extensions.cs" />
     <Compile Include="Models\FileHandlers\DocHandler.cs" />
     <Compile Include="Models\FileHandlers\FileHandlerCreator.cs" />
     <Compile Include="Models\FileHandlers\IFileHandler.cs" />
@@ -190,6 +201,7 @@
     <Compile Include="Models\FileHandlers\PdfHandler.cs" />
     <Compile Include="Models\FileHandlers\PngHandler.cs" />
     <Compile Include="Models\FileHandlers\RtfHandler.cs" />
+    <Compile Include="Models\HttpErrorMessage.cs" />
     <Compile Include="OCR\IPdfToText.cs" />
     <Compile Include="OCR\NicomsoftOcr.cs" />
     <Compile Include="OCR\NSOCR.cs" />
