--- a/WebLegemAPI/packages.config
+++ b/WebLegemAPI/packages.config
@@ -24,5 +24,6 @@
   <package id="Ninject.MVC3" version="3.2.1.0" targetFramework="net452" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net452" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net452" />
+  <package id="System.Interactive" version="3.1.1" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
 </packages>
