--- a/WebLegemDAL/packages.config
+++ b/WebLegemDAL/packages.config
@@ -9,4 +9,5 @@
   <package id="Microsoft.OData.Edm" version="6.14.0" targetFramework="net452" />
   <package id="Microsoft.Spatial" version="6.14.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="System.Interactive" version="3.1.1" targetFramework="net452" />
 </packages>
