--- a/WebLegemAPI/Web.config
+++ b/WebLegemAPI/Web.config
@@ -17,12 +17,12 @@
     
     
   <appSettings>
-      
-      
+            
       <!--  -->
-    <add key="basePath" value="c:\oraData\web_legem" />
-    <add key="textPath" value="c:\oraData\web_legem\text" />
+    <add key="basePath" value="c:\oradata\web_legem" />
+    <add key="textPath" value="c:\oradata\web_legem\text" />
     <add key="oracleDir" value="contenidos_dir" />
+    <add key="picturesDir" value="c:\oradata\web_legem\pictures"/>
       
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
