Se habilito las funciones de roles, y se lista y crea usuarios, aun hay errores en las interfaces de roles: los permisos aun parecen conjuntos, debe quitarseles el recuadro de modulo, o al menos la raya inferior, y el usuarios, cuando se selecciona el usuario de la lista, no se carga en el formulario, es decir no se puede editar

--- a/TestDb/TestDb.csproj
+++ b/TestDb/TestDb.csproj
@@ -79,6 +79,8 @@
     <Compile Include="EntidadTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecursosTest.cs" />
+    <Compile Include="RolesTest.cs" />
     <Compile Include="TestTipoAnotacion.cs" />
     <Compile Include="TipoDocumentoTest.cs" />
     <Compile Include="TipoEntidadTest.cs" />
