--- a/WebLegemDAL/WebLegemDAL.csproj
+++ b/WebLegemDAL/WebLegemDAL.csproj
@@ -78,36 +78,33 @@
     <Compile Include="Dao\DB.cs" />
     <Compile Include="Dao\DocumentoDao.cs" />
     <Compile Include="Dao\EntidadDao.cs" />
+    <Compile Include="Dao\RecursoDao.cs" />
+    <Compile Include="Dao\RolDao.cs" />
     <Compile Include="Dao\TipoAnotacionDao.cs" />
     <Compile Include="Dao\TipoDocumentoDao.cs" />
     <Compile Include="Dao\TipoEntidadDao.cs" />
-    <Compile Include="Entities\Accion.cs" />
-    <Compile Include="Factories\AccionFactory.cs" />
+    <Compile Include="Dao\UsuarioDao.cs" />
     <Compile Include="Entities\Anotacion.cs" />
     <Compile Include="Factories\AnotacionFactory.cs" />
     <Compile Include="Entities\Archivo.cs" />
     <Compile Include="Dao\ArchivoDao.cs" />
     <Compile Include="DALExtensionMethods.cs" />
     <Compile Include="Entities\Documento.cs" />
-    <Compile Include="Entities\Contenido.cs" />
+    <Compile Include="Entities\ContenidoDocumento.cs" />
     <Compile Include="Factories\ArchivoFactory.cs" />
     <Compile Include="Factories\ContenidoFactory.cs" />
-    <Compile Include="Factories\DocumentoConContenidoFactory.cs" />
     <Compile Include="Factories\DocumentoFactory.cs" />
     <Compile Include="Entities\Entidad.cs" />
     <Compile Include="Factories\EntidadFactory.cs" />
-    <Compile Include="Entities\Modulo.cs" />
-    <Compile Include="Factories\ModuloFactory.cs" />
-    <Compile Include="Entities\Permiso.cs" />
-    <Compile Include="Factories\PermisoFactory.cs" />
+    <Compile Include="Factories\RecursoArrayFactory.cs" />
     <Compile Include="Entities\Recurso.cs" />
     <Compile Include="Factories\RecursoFactory.cs" />
-    <Compile Include="Factories\PermisoArrayFactory.cs" />
     <Compile Include="Entities\Rol.cs" />
     <Compile Include="Factories\RolFactory.cs" />
     <Compile Include="Entities\TipoAnotacion.cs" />
     <Compile Include="Factories\TipoAnotacionFactory.cs" />
     <Compile Include="Entities\TipoDocumento.cs" />
+    <Compile Include="Factories\TipoDocumentoArrayFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Factories\TipoDocumentoFactory.cs" />
     <Compile Include="Entities\TipoEntidad.cs" />
