interfaz administracion y gestion documental

--- a/WebLegemAPI/Web.config
+++ b/WebLegemAPI/Web.config
@@ -12,7 +12,7 @@
         <add key="por_el_cual" value="^Por el Cual.*" />
         <add key="asunto" value="^Asunto.*" />
         <add key="a_traves" value="^A traves del cual.*" />
-        <add key="medio_de" value="^Por medio del cual.*" />
+        <add key="medio_de" value="^Por medio de.*" />        
     </ExpresionesAsunto>
     
     
