ya se miran las fotos subidas al servidor de los usuarios, pero aparecio el bug tradicional de las listas y el objeto seleccionado: no aparece la marca verde que indica el objeto seleccionado

--- a/WebLegemAPI/WebLegemAPI.csproj
+++ b/WebLegemAPI/WebLegemAPI.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Controllers\FotosController.cs" />
     <Compile Include="Controllers\RecursoController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
+    <Compile Include="Controllers\SessionController.cs" />
     <Compile Include="Controllers\TipoAnotacionController.cs" />
     <Compile Include="Controllers\TipoDocumentoController.cs" />
     <Compile Include="Controllers\TipoEntidadController.cs" />
