Permisos para acceder a los modulos y gestion de usuarios, lista, anotaciones, funcionan pero aun no estan completas

--- a/TestDb/TestDb.csproj
+++ b/TestDb/TestDb.csproj
@@ -75,6 +75,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analizador\AnalizadorAnotaciones.cs" />
+    <Compile Include="Analizador\AnalizadorTest.cs" />
     <Compile Include="ArchivoTest.cs" />
     <Compile Include="EntidadTest.cs" />
     <Compile Include="Program.cs" />
