inclusion de dependencias del proyecto, bower y npm

--- a/WebLegemClient/package.json
+++ b/WebLegemClient/package.json
@@ -16,7 +16,7 @@
   },
   "main": "server.js",
   "author": {
-    "name": "Mario F. Flórez D.",
+    "name": "Mario F. FlÃ³rez D.",
     "email": "marioffdsw@gmail.com"
   }
 }
